<resources>
    <string name="app_name">citrus</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="eureka">eureka</string>
    <string name="eureka_address">sample@eure.com</string>
    <string name="create_new">Create New</string>
    <string name="create_new_description">Stack the to-do list to me.</string>
    <string name="task_name">Task name</string>
    <string name="create">Create</string>
    <string name="create_successfully">You have created %1$s successfully.</string>
    <string name="complete_task">You have completed %1$s.</string>
    <string name="error_empty_name">Please input name.</string>
    <string name="good_job">Good Job !</string>
    <string name="keep_it_up">Keep it up !</string>
    <string name="you_can_do_it">You can do it !</string>
    <string name="undo">UNDO</string>
</resources>
